@@ -26,7 +26,7 @@ export(
        "grid.plot.and.legend",
        "grid.pretty",
        "grid.prompt",
-       "grid.refresh",
+       "grid.refresh", 
        "grid.show.layout", "grid.show.viewport",
 
        "unit",
@@ -66,6 +66,7 @@ export(
        "getGrob", "setGrob", "addGrob", "removeGrob", "editGrob",
        "gEdit", "gEditList", "applyEdit", "applyEdits",
        "grid.grab", "grid.grabExpr",
+       "grid.reorder", "reorderGrob",
        "grid.cap",
        "setChildren",
        "showGrob",
